<resources>
    <string name="app_name">MyPortofolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="portofolio_title">My Nano Degree Apps</string>
    <string name="button_spotify">SPOTIFY STREAMER</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_reader">XYZ READER</string>
    <string name="button_capstone_app">CAPSTONE APP</string>

</resources>
