<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portofolio_title"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        />


    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_spotify"
        android:text="@string/button_spotify"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColors"
        android:layout_marginTop="16dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_scores"
        android:text="@string/button_scores"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColors"
        android:layout_marginTop="16dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_library"
        android:text="@string/button_library"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColors"
        android:layout_marginTop="16dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_buid"
        android:text="@string/button_build_it_bigger"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColors"
        android:layout_marginTop="16dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_reader"
        android:text="@string/button_reader"
        android:layout_gravity="center_horizontal"
        android:background="@color/buttonColors"
        android:layout_marginTop="16dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:id="@+id/btn_capstone"
        android:text="@string/button_capstone_app"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="@color/capstone_button"
        android:layout_marginTop="16dp"
        />

</LinearLayout>
